<resources>
    <string name="app_name">HelpScout</string>
    <string name="conversations">conversations</string>
    <string name="title_activity_mailbox">MailboxActivity</string>

    <string name="email_address">Email Address</string>
    <string name="psw">Password</string>
    <string name="login">Login</string>

    <string name="close">Close</string>
    <string name="title_dialog_replay">Replay</string>
    <string name="send">Send</string>
    <string name="bcc">Cc/Bcc</string>
    <string name="messange">Messange</string>

    <string name="email_to_field">Email To:</string>
    <string name="support_email">software@globalstd.com</string>
    <string name="subject">Subject</string>

    <string name="take_photo">Take Photo</string>
    <string name="last_photo">Use Last Photo</string>
    <string name="choose_library">Choose from Library</string>
    <string name="import_file">Import File From</string>

    <string name="active">ACTIVE</string>
    <string name="pending">PENDING</string>
    <string name="closed">CLOSED</string>
    <string name="spam">SPAM</string>
</resources>
