<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- header -->


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:orientation="vertical"
                >

                <EditText
                    android:id="@+id/email_to_box"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_to_field"
                    android:text="@string/support_email"
                    android:inputType="textEmailAddress"
                    android:enabled="false" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/subject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/txtSubject"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/subject"
                        android:singleLine="true"
                        android:inputType="textEmailSubject"
                        android:textColor="@android:color/black"
                        />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/bcc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <EditText
                        android:id="@+id/txtCC"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/bcc"
                        android:textColorHint="@color/et_divider_not_focused"
                        />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/opinion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="20dp">

                    <EditText
                        android:id="@+id/txtMessage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top|left"
                        android:hint="@string/messange"
                        android:inputType="textMultiLine"
                        android:minLines="6"
                        android:padding="12dp"
                        android:textColor="@android:color/black"

                        />


                </android.support.design.widget.TextInputLayout>

                <RelativeLayout
                    android:id="@+id/btnSend"
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@drawable/ripple_button_blue">

                    <TextView
                        android:id="@+id/lblSend"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/send"
                        android:textColor="@color/md_white_1000"

                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_margin="5dp" />

                </RelativeLayout>

            </LinearLayout>

        </RelativeLayout>



    </LinearLayout>

</RelativeLayout>