<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Take Photo-->
    <RelativeLayout

        android:id="@+id/btnTakePhoto"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:layout_weight="1"
        android:background="@drawable/ripple_button_black">

        <TextView
            android:id="@+id/lblTakePhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/take_photo"
            android:textColor="@color/md_white_1000"
            android:textSize="20sp"

            android:gravity="center_horizontal"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp" />

    </RelativeLayout>

    <!-- Use Last Photo -->
    <RelativeLayout
        android:id="@+id/btnLastPhoto"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:layout_weight="1"
        android:background="@drawable/ripple_button_black">

        <TextView
            android:id="@+id/lblLastPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/last_photo"
            android:textColor="@color/md_white_1000"
            android:textSize="20sp"

            android:gravity="center_horizontal"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp" />

    </RelativeLayout>

    <!-- Choose from Library -->
    <RelativeLayout

        android:id="@+id/btnChooseLibrar"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:layout_weight="1"
        android:background="@drawable/ripple_button_black">

        <TextView
            android:id="@+id/lblChooseLibrary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/choose_library"
            android:textColor="@color/md_white_1000"
            android:textSize="20sp"

            android:gravity="center_horizontal"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp" />

    </RelativeLayout>

    <!-- Import File From -->
    <RelativeLayout

        android:id="@+id/btnImportFile"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:layout_weight="1"
        android:background="@drawable/ripple_button_black">

        <TextView
            android:id="@+id/lblImportFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/import_file"
            android:textColor="@color/md_white_1000"
            android:textSize="20sp"

            android:gravity="center_horizontal"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp" />

    </RelativeLayout>

</LinearLayout>
