<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/lib/com.app.chasebank"
    android:background="#ffffff">

    <ScrollView
        android:id="@+id/animated_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp">

            <ImageView
                android:id="@+id/imageSplash"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/logo_login"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/registrationCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/txtRegistrationCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_address"
                        android:textColorHint="@color/et_divider_not_focused"
                        />

                </android.support.design.widget.TextInputLayout>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/psw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/txtPsw"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/psw"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:singleLine="true"

                        android:textColorHint="@color/et_divider_not_focused"/>

                </android.support.design.widget.TextInputLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/footer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <RelativeLayout

                    android:id="@+id/btnLogin"
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@drawable/ripple_button_blue"
                    android:layout_marginTop="20dp">

                    <TextView
                        android:id="@+id/lblLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/login"
                        android:textColor="@color/md_white_1000"
                        android:textSize="20sp"

                        android:gravity="center_horizontal"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"
                        android:layout_margin="10dp" />

                </RelativeLayout>


            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp">

        <ImageView
            android:id="@+id/google"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@drawable/btn_google"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp" />
    </RelativeLayout>


</RelativeLayout>